Switch angular-quickstart-lib from SystemJS to Webpack

--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -13,5 +13,9 @@
   },
   "exclude": [
     "main-aot.ts"
-  ]
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "forkChecker": true,
+    "useWebpackText": true
+  }
 }
