--- a/integration/package.json
+++ b/integration/package.json
@@ -10,7 +10,7 @@
     "build:aot": "node build.js",
     "serve": "lite-server -c=bs-config.json",
     "serve:aot": "lite-server -c bs-config.aot.json",
-    "serve:e2e": "lite-server -c=bs-config.e2e.json",
+    "serve:e2e": "lite-server -c bs-config.e2e.json",
     "serve:e2e-aot": "lite-server -c bs-config.e2e-aot.json",
     "prestart": "npm run build",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
@@ -25,31 +25,31 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/common": "^4.2.6",
+    "@angular/compiler": "^4.2.6",
+    "@angular/compiler-cli": "^4.2.6",
+    "@angular/core": "^4.2.6",
+    "@angular/platform-browser": "^4.2.6",
+    "@angular/platform-browser-dynamic": "^4.2.6",
     "quickstart-lib": "../dist/",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.4.2",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.36",
-    "concurrently": "^3.4.0",
-    "jasmine-core": "~2.4.1",
+    "concurrently": "^3.2.0",
     "glob": "^7.1.1",
+    "jasmine-core": "~2.4.1",
     "lite-server": "^2.2.2",
     "protractor": "~5.1.0",
     "rimraf": "^2.5.4",
-    "rollup": "^0.42.0",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "typescript": "~2.3.0"
+    "rollup": "^0.41.4",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
+    "typescript": "^2.4.1"
   },
   "repository": {}
 }
