--- a/package.json
+++ b/package.json
@@ -17,17 +17,11 @@
     "clean": "rimraf out-tsc dist/*",
     "prebuild": "npm run clean",
     "build": "node build.js",
-    "build-demo": "tsc -p src/demo/",
-    "build-demo:watch": "tsc -p src/demo/ -w",
-    "serve": "lite-server -c=bs-config.json",
-    "prestart": "npm run build-demo",
-    "start": "concurrently \"npm run build-demo:watch\" \"npm run serve\"",
-    "build-test": "tsc -p src/lib/tsconfig.spec.json",
-    "build-test:watch": "tsc -p src/lib/tsconfig.spec.json -w",
-    "pretest": "npm run build-test",
-    "test": "concurrently \"npm run build-test:watch\" \"karma start karma.conf.js\"",
-    "coverage": "karma start karma-coverage.conf.js --single-run",
-    "pretest:once": "npm run build-test",
+    "build-demo": "rimraf dist && webpack --progress --profile --bail",
+    "build-demo:watch": "rimraf dist && webpack --progress --profile --bail --watch",
+    "serve": "webpack-dev-server --inline --progress --port 8080",
+    "start": "npm run serve",
+    "test": "karma start karma.conf.js --no-single-run --auto-watch",
     "test:once": "karma start karma.conf.js --single-run",
     "preintegration": "npm run build && cd integration && npm run clean && npm install",
     "integration": "npm run integration:aot && npm run integration:jit",
@@ -40,39 +34,73 @@
     "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
   },
   "devDependencies": {
-    "@angular/common": "~4.1.3",
-    "@angular/compiler": "~4.1.3",
-    "@angular/compiler-cli": "~4.1.3",
-    "@angular/core": "~4.1.3",
-    "@angular/platform-browser": "~4.1.3",
-    "@angular/platform-browser-dynamic": "~4.1.3",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "camelcase": "^4.0.0",
-    "concurrently": "3.4.0",
+    "@angular/common": "^4.3.2",
+    "@angular/compiler": "^4.3.2",
+    "@angular/compiler-cli": "^4.3.2",
+    "@angular/core": "^4.3.2",
+    "@angular/forms": "^4.3.2",
+    "@angular/platform-browser": "^4.3.2",
+    "@angular/platform-browser-dynamic": "^4.3.2",
+    "@angularclass/hmr": "^2.1.3",
+    "@angularclass/hmr-loader": "^3.0.4",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.19",
+    "@types/selenium-webdriver": "3.0.4",
+    "angular2-template-loader": "^0.6.2",
+    "autoprefixer": "^7.1.2",
+    "awesome-typescript-loader": "^3.2.2",
+    "camelcase": "^4.1.0",
+    "codelyzer": "3.1.2",
+    "concurrently": "3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
-    "glob": "^7.1.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "glob": "^7.1.2",
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "^2.30.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.7.0",
+    "jasmine-spec-reporter": "^4.1.1",
+    "json-loader": "^0.5.7",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-html-reporter": "^0.2.7",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-coverage": "^0.1.4",
-    "lite-server": "^2.2.2",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-istanbul": "0.6.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "2.0.4",
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.5.3",
+    "null-loader": "0.1.1",
+    "postcss-loader": "^1.3.3",
+    "protractor": "^5.1.2",
+    "raw-loader": "0.5.1",
+    "reflect-metadata": "^0.1.10",
+    "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
-    "rollup": "^0.42.0",
-    "rollup-plugin-sourcemaps": "^0.4.1",
+    "rollup": "^0.45.2",
+    "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-uglify": "^2.0.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rxjs": "^5.0.1",
-    "standard-version": "^4.0.0",
-    "systemjs": "^0.19.40",
-    "tslint": "^4.4.2",
-    "typescript": "~2.3.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.4.2",
+    "sass-loader": "^6.0.6",
+    "shelljs": "^0.7.8",
+    "style-loader": "^0.18.2",
+    "systemjs": "^0.20.17",
+    "ts-helpers": "^1.1.2",
+    "tslint": "^5.5.0",
+    "tslint-loader": "^3.5.3",
+    "typedoc": "^0.8.0",
+    "typescript": "^2.4.2",
+    "url-loader": "^0.5.9",
+    "webpack": "3.4.1",
+    "webpack-dev-server": "2.6.1",
+    "zone.js": "^0.8.16"
   }
 }
