--- a/src/lib/tsconfig.es5.json
+++ b/src/lib/tsconfig.es5.json
@@ -1,10 +1,11 @@
 {
-  "extends": "./tsconfig.lib.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "outDir": "../../out-tsc/lib-es5/",
     "baseUrl": "",
-    "types": []
+    "types": [],
+    "experimentalDecorators": true
   },
   "files": [
     "./index.ts",
