--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
     "outDir": "../../out-tsc/lib-es2015/",
     "target": "es2015",
     "rootDir": "./",
     "baseUrl": "",
-    "types": []
+    "types": [
+      "jasmine"
+    ]
   },
   "files": [
     "./index.ts",
