--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,16 @@
     "inlineSources": true,
     "declaration": true,
     "experimentalDecorators": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true,
     "skipLibCheck": true,
     "stripInternal": true,
     "lib": [
       "es2015",
       "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
     ]
   }
 }
